--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 # ----------------------- #
 
 url: http://loganlinn.com
-title: loganlinnlogs
-subtitle: logs not blogs
+title: loganlinnlog
+subtitle:
 author: Logan Linn
 simple_search: http://google.com/search
 description:
